feat(Add Settings.json Conventional commit): :lipstick: New scope

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "conventionalCommits.scopes": [
-        "Start project"
+        "Start project",
+        "Add Settings.json Conventional commit"
     ]
 }
