--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "Start project",
-        "Add Settings.json Conventional commit"
+        "Add Settings.json Conventional commit",
+        "Add code"
     ]
 }
