feat(Add code): :sparkles: Header update
Header working as design

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "Start project",
         "Add Settings.json Conventional commit",
         "Add code"
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
